# Repo123

./: CMakeLists.txt  Jenkinsfile  Makefile  README.md  build.sh  docker-compose.yml  main.c  make
docker/: Dockerfile.cplus  Dockerfile.dev  Dockerfile.python  docker-compose.yml
jenkins/: Jenkinsfile  run_jenkins.bat
jenkins/Jenkinsfile/: calculator-pipelines.groovy
python_app/: calculator.py  test_calculator.py
src/: calculator.c  calculator.cpp  calculator.h  main.c  main.cpp
tests/: CMakeLists.txt  calculator_test.cpp  test_calculator.c
